# docs/swagger.yaml
@@ -434,4 +434,65 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 更新标签
+  /auth:
+    post:
+      parameters:
+      - description: key
+        in: body
+        name: app_key
+        required: true
+        schema:
+          type: string
+      - description: secret
+        in: body
+        name: app_secret
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取token
+  /upload/file:
+    post:
+      parameters:
+      - description: 文件
+        in: body
+        name: file
+        required: true
+        schema:
+          type: integer
+      - description: 文件类型
+        in: body
+        name: type
+        schema:
+          type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 上传文件
 swagger: "2.0"
