# internal/routers/api/auth.go
@@ -8,6 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary 获取token
+// @Produce  json
+// @Param app_key body string true "key"
+// @Param app_secret body string true "secret"
+// @Success 200 {object} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /auth [post]
 func GetAuth(c *gin.Context) {
 	param := service.AuthRequest{}
 	response := app.NewResponse(c)
