# internal/routers/api/upload.go
@@ -16,6 +16,14 @@ func NewUpload() Upload {
 	return Upload{}
 }
 
+// @Summary 上传文件
+// @Produce  json
+// @Param file body byte true "文件"
+// @Param type body int false "文件类型"
+// @Success 200 {object} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /upload/file [post]
 func (u Upload) UploadFile(c *gin.Context) {
 	response := app.NewResponse(c)
 	file, fileHeader, err := c.Request.FormFile("file")
